# os-critical-region

./: .gitignore  CMakeLists.txt  README.md  codestyle.md  main.cpp
demo/: benchmark-results.md  benchmark.cpp  demoBakeryLock.cpp  demoDekkerLock.cpp
demo/utils/: DemoTools.hpp
src/: BakeryLock.hpp  DekkerLock.cpp  DekkerLock.hpp  FixnumLockException.hpp  FixnumLockable.hpp  FixnumLockableBase.hpp  ImprovedBakeryLock.hpp  LockPrimitives.hpp
tests/: test.cpp
tests/utils/: MutualExclusionTestUtil.hpp
